--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@
 .weather{
   background-color: lightgrey;
   font-family: 'Quicksand', sans-serif;
-  padding: 10px 30px
+  font-size: 30px;
+  text-align: center;
+  height: 200px;
+  padding: 75px 30px 10px 30px
 }
 
 .conditions{
@@ -23,12 +26,14 @@
 .nav{
   padding: 10px 30px;
   background-color: #1C1C1C;
-  color: #F96901
+  color: #F96901;
+  height: 600px
 }
 
 .profile{
   background-color: #F96901;
-  padding: 10px 30px
+  padding: 10px 30px 10px 0px;
+  height: 600px
 }
 
 .header{
@@ -37,5 +42,10 @@
 }
 
 .profileText{
-  color: #1C1C1C
+  color: #1C1C1C;
+  font-size: 20px
+}
+
+.fLink{
+  color: #F96901
 }
